@@ -25,18 +25,20 @@
 /*
  * @test
  * @enablePreview
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED -Dgenerator.sample.factor=17 TestVarArgs
  */
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.GroupLayout;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.PaddingLayout;
+import java.lang.foreign.ValueLayout;
 
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.lang.invoke.MethodHandle;
@@ -48,6 +50,7 @@ import java.util.List;
 import java.util.function.Consumer;
 
 import static java.lang.foreign.MemoryLayout.PathElement.*;
+import static org.testng.Assert.*;
 
 public class TestVarArgs extends CallGeneratorHelper {
 
@@ -59,26 +62,26 @@ public class TestVarArgs extends CallGeneratorHelper {
         System.loadLibrary("VarArgs");
         try {
             MH_CHECK = MethodHandles.lookup().findStatic(TestVarArgs.class, "check",
-                    MethodType.methodType(void.class, int.class, MemoryAddress.class, List.class));
+                    MethodType.methodType(void.class, int.class, MemorySegment.class, List.class));
         } catch (ReflectiveOperationException e) {
             throw new ExceptionInInitializerError(e);
         }
     }
 
-    static final Addressable VARARGS_ADDR = findNativeOrThrow("varargs");
+    static final MemorySegment VARARGS_ADDR = findNativeOrThrow("varargs");
 
-    @Test(dataProvider = "functions")
+    @Test(dataProvider = "variadicFunctions")
     public void testVarArgs(int count, String fName, Ret ret, // ignore this stuff
                             List<ParamType> paramTypes, List<StructFieldType> fields) throws Throwable {
         List<Arg> args = makeArgs(paramTypes, fields);
 
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
             MethodHandle checker = MethodHandles.insertArguments(MH_CHECK, 2, args);
-            MemorySegment writeBack = LINKER.upcallStub(checker, FunctionDescriptor.ofVoid(C_INT, C_POINTER), session);
-            MemorySegment callInfo = MemorySegment.allocateNative(CallInfo.LAYOUT, session);
-            MemorySegment argIDs = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(args.size(), C_INT), session);
+            MemorySegment writeBack = LINKER.upcallStub(checker, FunctionDescriptor.ofVoid(C_INT, C_POINTER), arena.scope());
+            MemorySegment callInfo = MemorySegment.allocateNative(CallInfo.LAYOUT, arena.scope());;
+            MemorySegment argIDs = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(args.size(), C_INT), arena.scope());;
 
-            MemoryAddress callInfoPtr = callInfo.address();
+            MemorySegment callInfoPtr = callInfo;
 
             CallInfo.writeback(callInfo, writeBack);
             CallInfo.argIDs(callInfo, argIDs);
@@ -91,10 +94,11 @@ public class TestVarArgs extends CallGeneratorHelper {
             argLayouts.add(C_POINTER); // call info
             argLayouts.add(C_INT); // size
 
-            FunctionDescriptor desc = FunctionDescriptor.ofVoid(argLayouts.toArray(MemoryLayout[]::new))
-                    .asVariadic(args.stream().map(a -> a.layout).toArray(MemoryLayout[]::new));
+            FunctionDescriptor baseDesc = FunctionDescriptor.ofVoid(argLayouts.toArray(MemoryLayout[]::new));
+            Linker.Option varargIndex = Linker.Option.firstVariadicArg(baseDesc.argumentLayouts().size());
+            FunctionDescriptor desc = baseDesc.appendArgumentLayouts(args.stream().map(a -> a.layout).toArray(MemoryLayout[]::new));
 
-            MethodHandle downcallHandle = LINKER.downcallHandle(VARARGS_ADDR, desc);
+            MethodHandle downcallHandle = LINKER.downcallHandle(VARARGS_ADDR, desc, varargIndex);
 
             List<Object> argValues = new ArrayList<>();
             argValues.add(callInfoPtr); // call info
@@ -105,6 +109,58 @@ public class TestVarArgs extends CallGeneratorHelper {
 
             // args checked by upcall
         }
+    }
+
+    private static List<ParamType> createParameterTypesForStruct(int extraIntArgs) {
+        List<ParamType> paramTypes = new ArrayList<ParamType>();
+        for (int i = 0; i < extraIntArgs; i++) {
+            paramTypes.add(ParamType.INT);
+        }
+        paramTypes.add(ParamType.STRUCT);
+        return paramTypes;
+    }
+
+    private static List<StructFieldType> createFieldsForStruct(int fieldCount, StructFieldType fieldType) {
+        List<StructFieldType> fields = new ArrayList<StructFieldType>();
+        for (int i = 0; i < fieldCount; i++) {
+            fields.add(fieldType);
+        }
+        return fields;
+    }
+
+    @DataProvider(name = "variadicFunctions")
+    public static Object[][] variadicFunctions() {
+        List<Object[]> downcalls = new ArrayList<>();
+
+        var functionsDowncalls = functions();
+        for (var array : functionsDowncalls) {
+            downcalls.add(array);
+        }
+
+        // Test struct with 4 floats
+        int extraIntArgs = 0;
+        List<StructFieldType> fields = createFieldsForStruct(4, StructFieldType.FLOAT);
+        List<ParamType> paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        // Test struct with 4 floats without enough registers for all fields
+        extraIntArgs = 6;
+        fields = createFieldsForStruct(4, StructFieldType.FLOAT);
+        paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        // Test struct with 2 doubles without enough registers for all fields
+        extraIntArgs = 7;
+        fields = createFieldsForStruct(2, StructFieldType.DOUBLE);
+        paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        // Test struct with 2 ints without enough registers for all fields
+        fields = createFieldsForStruct(2, StructFieldType.INT);
+        paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        return downcalls.toArray(new Object[0][]);
     }
 
     private static List<Arg> makeArgs(List<ParamType> paramTypes, List<StructFieldType> fields) throws ReflectiveOperationException {
@@ -121,13 +177,13 @@ public class TestVarArgs extends CallGeneratorHelper {
         return args;
     }
 
-    private static void check(int index, MemoryAddress ptr, List<Arg> args) {
+    private static void check(int index, MemorySegment ptr, List<Arg> args) {
         Arg varArg = args.get(index);
         MemoryLayout layout = varArg.layout;
         MethodHandle getter = varArg.getter;
         List<Consumer<Object>> checks = varArg.checks;
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment seg = MemorySegment.ofAddress(ptr, layout.byteSize(), session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment seg = MemorySegment.ofAddress(ptr.address(), layout.byteSize(), arena.scope());
             Object obj = getter.invoke(seg);
             checks.forEach(check -> check.accept(obj));
         } catch (Throwable e) {
@@ -143,11 +199,11 @@ public class TestVarArgs extends CallGeneratorHelper {
         static final VarHandle VH_writeback = LAYOUT.varHandle(groupElement("writeback"));
         static final VarHandle VH_argIDs = LAYOUT.varHandle(groupElement("argIDs"));
 
-        static void writeback(MemorySegment seg, Addressable addr) {
-            VH_writeback.set(seg, addr.address());
+        static void writeback(MemorySegment seg, MemorySegment addr) {
+            VH_writeback.set(seg, addr);
         }
-        static void argIDs(MemorySegment seg, Addressable addr) {
-            VH_argIDs.set(seg, addr.address());
+        static void argIDs(MemorySegment seg, MemorySegment addr) {
+            VH_argIDs.set(seg, addr);
         }
     }
 
@@ -263,6 +319,7 @@ public class TestVarArgs extends CallGeneratorHelper {
             S_PPF,
             S_PPD,
             S_PPP,
+            S_FFFF,
             ;
 
             public static NativeType of(String type) {
